[package]
name = "beam-sel"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
clap = { version = "4.5", features = ["derive", "env"] }
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
beam-lib = { git = "https://github.com/samply/beam", branch = "feat/rework-sockets", features = ["http-util", "sockets"] }
hyper = { version = "1", features = ["client"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", features = ["io"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde_json = "1"
anyhow = "1"
